Fixed bug with '100vh' on mobiles (set '100dvh' instead)

--- a/styles/global/glStyle.scss
+++ b/styles/global/glStyle.scss
@@ -6,7 +6,7 @@
 
 // Global container of whole page
 .global-container {
-  min-height: 100vh;
+  min-height: 100dvh;
   max-width: 1920px;
   width: 100%;
   margin: 0 auto;
